syntax = "proto3";

package org.dashj.platform.wallet;

message TxMetadataItem {
  bytes txId = 1;
  optional uint64 timestamp = 2;
  optional string memo = 3;
  optional double exchangeRate = 4;
  optional string currencyCode = 5;
  optional string taxCategory = 6;
  optional string service = 7;
  optional string customIconUrl = 8;
  optional string giftCardNumber = 9;
  optional string giftCardPin = 10;
  optional string merchantName = 11;
  optional double originalPrice = 12;
  optional string barcodeValue = 13;
  optional string barcodeFormat = 14;
  optional string merchantUrl = 15;
  map<string, string> otherData = 16;
}

message TxMetadataBatch {
  repeated TxMetadataItem items = 1;
}